  here and there. And the head gets cut off sometimes:
  need to add sector padding!
* Artefacts have been fixed! The getSector function always supplied the coord
  back it was given, but that could have been from INSIDE the sector, so it was
  wrong. Now we have a function that'll give you a sector coord based on the
  sector number alone.

--- Friday 2012-06-29 ---
* Modified the drawGrid debug function, the sector lines are now drawn
  correctly and move along with the map.
* Because of the improved drawGrid function, some other hardcoded debug
  code may be removed.
* Plain shadows are drawn again.
* New debug log function, some fixes here and there

--- Thursday 2012-06-28 ---
* Sectors are now correctly drawn when moving, resulting in smooth motion.
* Started moving the drawAnimation function over to the new design

--- Wednesday 2012-06-27 ---
* Added inner sector coordinates to the coordinate functions
* Added new dirtyness functions, seems to be working.
* Added some extra debug functions, added sector dirtyness and cleaned it up a
  bit.
* Started a whole new mess by redesigning drawTile and drawTileSpecific
* Map-animations work again. Tiles that shouldn't be drawn aren't.

--- Tuesday 2012-06-26 ---
* The map is now rendered in the correct place, sectors work perfectly.
* Added some debug functions for displaying sectors in the debug canvas.
* Fixed autotiles.

--- Monday 2012-06-25 ---
* Mergin the old sector changes with the new ones in the sector branch

--- Monday 2011-12-05 ---
* A few modest changes. 

--- Sunday 2011-12-04 ---
* Objects are now drawn on a per-position basis. For every position we see if
  there is an object there and draw it BEFORE we draw anything else on that
  layer. Is probably a bit more resource intensive, would have to see what
  impact it has when lots of objects are on the map.

--- Saturday 2011-12-03 ---
* New cache layer is so complex it would take days to implement. We'll leave it
  as it is for the moment.